	retained whilst debugging.

	* Temp.pm: Force chmod on file before unlinking it. This can be a
	problem on windows (see RT bug #6935). tempdir() has been fixed by
	Slaven's earlier patch to change the rmtree arguments.

	* Temp.pm (top_system_uid): Add interix patch from Todd Vierling

	* Temp.pm (_gettemp): Pod patch from Steven Lembark

	* Temp.pm: Add note on forking (prompted by Daniel Macks)

	* Temp.pm (cmpstat): Roman Vasicek reported problems with the _
	filehandle. Play it safe and remove that handle. (see RT bug #8822)

	* t/tempfile.t: Add test for write proteceted temp file (thanks to
	Slaven Rezic)

	* Temp.pm (_can_do_level): Change argument to rmtree to make it
	attempt to remove write-protected files on cleanup (thanks to
	Slaven Rezic)

2003-08-16  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.14 ---

	* t/object.t: Add test of OO interface and switch to Test::More

	* Temp.pm: Add object-oriented interface.
	
	* Temp.pm: mpeix fixes from Ken Hirsch <hirschk@labcorp.com>

2003-08-15  Tim Jenness  <tjenness@cpan.org>
	
	--- RELEASE V0.13 ---
	
	* Temp.pm: Integrate doc fixes from bleadperl (Slaven Rezic and
	Jeffrey Friedl)

	* Makefile.PL: Add INSTALLDIRS switch on perl version so that the
	module installs into the correct place for perl 5.6.1 and newer.

2002-08-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm: Synch with perl 5.8.0 v0.13 MacOS fixes (Chris Nandor)

2001-02-22  Tim Jenness  <timj@jach.hawaii.edu>

	--- RELEASE V0.12 ---
	
	* t/posix.t: The unlink0 tests now skip on failure

	* t/mktemp.t: The unlink0 tests now skip on failure

	* Temp.pm (tmpfile): tmpfile returns undef on failure rather than
	croaking.

2001-02-21  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Temp.pm: 
	      -Add fix for CGI::Carp 
                  [Thanks to John Labovitz <johnl@valiha.inside.sealabs.com>]
              - Use error string to propogate reason rather than a carp

2000-11-24  Tim Jenness  <timj@jach.hawaii.edu>
