@@ -11,7 +11,9 @@
 
 	* Temp.pm (_gettemp): Pod patch from Steven Lembark
 
-	* Temp.pm: Add note on forking (prompted by Daniel Macks)
+	* Temp.pm: Add note on forking and make sure that END blocks only
+	remove temporary files created by the current process ID (prompted
+	by Daniel Macks)
 
 	* Temp.pm (cmpstat): Roman Vasicek reported problems with the _
 	filehandle. Play it safe and remove that handle. (see RT bug #8822)
